# macaudio

./: CMakeLists.txt  README.md
Source/: Main.cpp
mixer/: requirements.txt  run.py
mixer/app/: api.py  audio.py  dsp.py  state.py
mixer/ui/: index.html
